# minterop-data

./: .gitignore  Builder.dockerfile  Cargo.toml  Dockerfile  README.md  TODO.md  tmp.py
.github/: pull_request_template.md
.github/workflows/: cd.yaml  ci.yaml  cicd.yaml  pr.yaml  release.yaml
hasura/metadata/: query_collections.yaml  rest_endpoints.yaml
migrations/2022-05-09-162744_bootstrap_db/: down.sql  up.sql
migrations/2022-07-08-114405_mb_views/: down.sql  up.sql
migrations/2022-09-05-104751_indexes/: down.sql  up.sql
migrations/2022-09-08-150326_mb_views_base_uris/: down.sql  up.sql
migrations/2022-09-20-100319_add_content_flag/: down.sql  up.sql
migrations/2022-10-03-092836_reference_blob_views/: down.sql  up.sql
migrations/2022-10-10-092913_offer_expiry/: down.sql  up.sql
migrations/2022-10-12-114927_listing-with-offer-view/: down.sql  up.sql
migrations/2022-10-17-124316_ownership_views/: down.sql  up.sql
migrations/2022-10-19-105202_filter_listing_views/: down.sql  up.sql
migrations/2022-10-22-142201_add_invalidated_at/: down.sql  up.sql
migrations/2022-10-26-090840_unfilter_listing_views/: down.sql
migrations/2022-10-26-143936_views-invalidation-updates/: down.sql  up.sql
migrations/2022-10-27-082801_mb-earnings-tracking/: down.sql  up.sql
migrations/2022-11-02-140120_filter-unburned-meta-prices/: down.sql  up.sql
migrations/2022-11-02-152113_fix-tokens-with-listing/: up.sql  (+1 more)
scripts/: generate-schema.sh  make-builder.sh  reapply-migrations.sh  redeploy.sh  unpin-db.sh
src/: db_rows.rs  lib.rs  rpc_payloads.rs  schema.rs
(+134 files in other folders)
